fix name contrast issue

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -96,7 +96,6 @@
 }
 
 .intro_name {
-  color: var(--text-light);
   letter-spacing: 0.2rem;
   margin: 1rem 0rem;
   text-transform: uppercase;
